fix: negative z-index on `@page {...}` causes page (margin-box) content to disappear
Fixes #665

--- a/packages/core/resources/vivliostyle-viewport-screen.css
+++ b/packages/core/resources/vivliostyle-viewport-screen.css
@@ -23,6 +23,7 @@
 
   [data-vivliostyle-page-container] {
     background: white;
+    z-index: -2147483648;
   }
 
   [data-vivliostyle-viewer-viewport] {
